fixed overflow in some areas

--- a/app/assets/stylesheets/sections/plan.sass
+++ b/app/assets/stylesheets/sections/plan.sass
@@ -910,10 +910,10 @@ body
         border: 0px
         margin: 0px 0px 0px 0px
       &.gallery
+        width: 200px
         &.active
           background: #333
           color: #fff
-          width: 200px
           border-bottom: 1px solid #222
           z-index: 3000
           a
@@ -924,16 +924,15 @@ body
             position: absolute
             background: #333
             color: #fff
-            width: 200px
             border-bottom: 3px solid #222
             z-index: 3000
             a
               color: #fff
       &.dayby
+        width: 133px
         &.active
           background: #333
           color: #fff
-          width: 133px
           border-bottom: 1px solid #222
           z-index: 3000
           a
@@ -944,7 +943,6 @@ body
             position: absolute
             background: #333
             color: #fff
-            width: 133px
             border-bottom: 3px solid #222
             z-index: 3000
             a
